# kaka-lang

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_compiler.bat
include/: args_parse.h  errors.h  label.h  lexer.h  parser.h  types.h  util.h
src/: args_parse.c  errors.c  errors.h  label.c  label.h  lexer.c  lexer.h  main.c  parser.c  parser.h  stringlist.c  stringlist.h  stringmap.c  stringmap.h  types.c  types.h  util.c
tests/: CMakeLists.txt  arth.kaka  cast.kaka  cmp.kaka  jmp.kaka  log.kaka  misc.kaka  print.kaka  run_tests.bat  tests.c
tests/kaka_src/: misc.kaka
